smten/share/lib/Smten/Tests/ShouldFail/ClassCtx1.smtn

module Smten.Tests.ShouldFail.ClassCtx1 where

import Prelude

data Foo = Foo | Bar

class (Eq a) => MyNewEq a where
    myneweq :: a -> a -> a -> Bool

-- We failed to supply an instance of Eq for Foo, so this should not be
-- accepted.
instance MyNewEq Foo where
    myneweq Foo Foo Foo = True
    myneweq Bar Bar Bar = True
    myneweq _ _ _ = False

foo :: Bool
foo = myneweq Foo Bar Foo

